SalesforceHealthCloud/force-app/main/default/objects/HC_Asset_ExceptionLogger__c/HC_Asset_ExceptionLogger__c.object-meta.xml
<CustomObject>
    <label>Exception Logger</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Exception Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>