SalesforceHealthCloud/force-app/main/default/objects/HC_Asset_ExceptionLogger__c/fields/HC_Asset_Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>HC_Asset_Exception_Message__c</fullName>
    <label>Exception Message</label>
    <type>TextArea</type>
</CustomField>