SalesforceHealthCloud/force-app/main/default/objects/HC_Asset_ExceptionLogger__c/fields/HC_Asset_FlowName__c.field-meta.xml
<CustomField>
    <fullName>HC_Asset_FlowName__c</fullName>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>