SalesforceHealthCloud/force-app/main/default/objects/HC_Asset_ExceptionLogger__c/fields/HC_AssetRunning_User__c.field-meta.xml
<CustomField>
    <fullName>HC_AssetRunning_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Logger</relationshipName>
    <type>Lookup</type>
</CustomField>